Fixed several issues with the build image size and got node manager restart working